--- a/web/css/main.styl
+++ b/web/css/main.styl
@@ -158,6 +158,11 @@ for num in (0..6)
     left 0
     right 0
     bottom 0
+    h3
+      font-size 70px
+      font-family sans-serif
+      text-align center
+      padding 200px 0
     &.is-active
       z-index 1
 
