--- a/web/css/main.css
+++ b/web/css/main.css
@@ -174,6 +174,7 @@ Global elements
   left: 0;
   right: 0;
   bottom: 0;
+  overflow: hidden;
 }
 .company-info-slider .slide h3 {
   font-size: 70px;
