--- a/web/css/main.styl
+++ b/web/css/main.styl
@@ -165,10 +165,16 @@ for num in (0..6)
       text-align center
       padding 200px 0
     &.is-active
-      z-index 1 
+      z-index 1
 
+.footer-block
 .header-block
   height 1000px
   width 100%
   background yellowgreen
   border-bottom 5px solid #000000
+  h2
+    font-size 80px
+    text-align center
+    padding 200px 0
+
