--- a/web/css/main.styl
+++ b/web/css/main.styl
@@ -158,7 +158,9 @@ for num in (0..6)
     left 0
     right 0
     bottom 0
+    height 0
     overflow hidden
+    resize both
     h3
       font-size 70px
       font-family sans-serif
