--- a/web/css/main.styl
+++ b/web/css/main.styl
@@ -141,6 +141,7 @@ sliderBackgrounds = #4eb3d3, #4bc6e0,  #239e00, #ce9f00, #e27e4e, #e41b1d, #d034
 for num in (0..6)
   .slide-{num}
     background sliderBackgrounds[num]
+    background-size cover
 
 .company-info-slider-holder
   &.fixed
@@ -154,13 +155,14 @@ for num in (0..6)
   position relative
   .slide
     position absolute
+    margin 0 auto
     top 0
     left 0
     right 0
     bottom 0
     height 0
     overflow hidden
-    resize both
+
     h3
       font-size 70px
       font-family sans-serif
