--- a/web/css/main.css
+++ b/web/css/main.css
@@ -49,8 +49,8 @@ Global elements
 .visible {
   visibility: visible !important;
   opacity: 1 !important;
-  -ms-filter: none !important;
-  filter: none !important;
+  -ms-filter: none;
+  filter: none;
 }
 .clear {
   clear: both;
@@ -198,6 +198,7 @@ Global elements
   bottom: 0;
   height: 0;
   overflow: hidden;
+  resize: none;
 }
 .company-info-slider .slide h3 {
   font-size: 70px;
