--- a/web/css/main.css
+++ b/web/css/main.css
@@ -24,6 +24,9 @@ li {
   padding: 0;
   list-style: none;
 }
+a {
+  text-decoration: none;
+}
 /* =============================================================================
 Global elements
 ========================================================================== */
@@ -75,6 +78,7 @@ Global elements
 .min-width {
   position: relative;
   max-width: 1280px;
+  min-width: 1280px;
   margin: 0 auto;
 }
 /**** ICONS ****/
@@ -83,6 +87,7 @@ Global elements
   height: 40px;
   background: url("sprite") no-repeat;
   display: inline-block;
+  margin: 8px 0 0 50px;
 }
 .icon.icon-resoft-logo {
   background-image: none !important;
@@ -137,28 +142,43 @@ Global elements
 .icon.icon-resoft-logo:after {
   background-position: -40px -120px;
 }
+.icon-logo-big {
+  position: relative;
+  width: 95px;
+  height: 95px;
+  float: left;
+  background-image: url("../images/sprite.png");
+  background-position: -13px -13px;
+  margin: 58px 0 0 52px;
+}
+.icon-logo-big:hover {
+  background-position: -131px -13px;
+}
+.icon-logo-big span {
+  display: inline-block;
+  width: 95px;
+  text-align: center;
+  margin-top: 95px;
+  font-family: "Maxwell-bold", "Times New Roman", sans-serif;
+  font-size: 38px;
+  color: #fff;
+}
 /**** PAGES ****/
-.slide-0 {
-  background: #4eb3d3;
-}
-.slide-1 {
-  background: #4bc6e0;
-}
-.slide-2 {
-  background: #239e00;
-}
-.slide-3 {
-  background: #ce9f00;
-}
-.slide-4 {
-  background: #e27e4e;
-}
-.slide-5 {
-  background: #e41b1d;
-}
-.slide-6 {
-  background: #d03488;
-}
+/**** SLIDER TEST ****/
+/* .slide-{num}
+    background sliderBackgrounds[num]*/
+/* .slide-{num}
+    background sliderBackgrounds[num]*/
+/* .slide-{num}
+    background sliderBackgrounds[num]*/
+/* .slide-{num}
+    background sliderBackgrounds[num]*/
+/* .slide-{num}
+    background sliderBackgrounds[num]*/
+/* .slide-{num}
+    background sliderBackgrounds[num]*/
+/* .slide-{num}
+    background sliderBackgrounds[num]*/
 .company-info-slider-holder.fixed {
   position: fixed;
   top: 0;
@@ -204,4 +224,55 @@ Global elements
   font-size: 80px;
   text-align: center;
   padding: 200px 0;
+}
+/**** INDEX ****/
+.header {
+  z-index: 6;
+  position: fixed;
+  height: 58px;
+  width: 100%;
+  background: url("../images/header-bg.png");
+}
+.navigation {
+  zoom: 1;
+  float: right;
+  position: relative;
+  margin: 0 40px 0 0;
+}
+.navigation:before,
+.navigation:after {
+  content: "";
+  display: table;
+}
+.navigation:after {
+  clear: both;
+}
+.navigation li {
+  float: left;
+  margin: 16px 0 0 40px;
+}
+.navigation a {
+  font-family: 'Reef-bold', sans-serif;
+  font-size: 28px;
+  color: #fff;
+  line-height: 28px;
+  transition: 0.3s;
+}
+.navigation a:hover {
+  color: #f1635a;
+  transition: 0.3s;
+}
+.bg-picture {
+  z-index: 1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-height: 550px;
+  width: 100%;
+  min-width: 1280px;
+  background: url("../images/bg-image.jpg") no-repeat center center;
+  height: 641px;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
 }
