--- a/web/css/main.styl
+++ b/web/css/main.styl
@@ -217,7 +217,21 @@ Global elements
       width 113px
       height 110px
       background-position -660px -445px
-
+  &.icon-slide-5
+    margin 40px auto 0 auto
+    width 142px
+    height 199px
+    background-position -415px -592px
+  &.icon-slide-6
+    margin 38px auto 0 auto
+    width 236px
+    height 198px
+    background-position 0 -602px
+  &.icon-slide-7
+    margin 38px auto 0 auto
+    width 142px
+    height 140px
+    background-position -646px -570px
 
 /**** PAGES ****/
 /**** SLIDER TEST ****/
@@ -259,6 +273,7 @@ for num in (0..8)
       font-size 23px
       color #ffffff
       text-align center
+      text-transform uppercase
     &.is-active
       z-index 1
 
