--- a/web/css/main.styl
+++ b/web/css/main.styl
@@ -236,6 +236,23 @@ Global elements
     width 121px
     height 119px
     background-position -436px -162px
+.icon-social
+  float left
+  background-image url(spriteLink)
+  width 79px
+  height 80px
+  &.skype
+    background-position 0 -240px
+    &:hover
+      background-position -79px -240px
+/*&.facebook
+      background-position 0 -160px
+  &:hover
+      background-position -79px -240px*/
+  &.twitter
+    background-position 0 -320px
+    &:hover
+      background-position -80px -320px
 
 /**** PAGES ****/
 /**** SLIDER TEST ****/
