--- a/web/css/main.css
+++ b/web/css/main.css
@@ -87,6 +87,7 @@ Global elements
 }
 .content {
   position: relative;
+  overflow: hidden;
   height: 70%;
   max-width: 980px;
   min-width: 980px;
@@ -263,7 +264,8 @@ Global elements
   background-position: -436px -162px;
 }
 .icon-social {
-  float: left;
+  float: right;
+  margin: 10px 44px 0 0;
   background-image: url("../images/sprite.png");
   width: 79px;
   height: 80px;
@@ -274,14 +276,16 @@ Global elements
 .icon-social.skype:hover {
   background-position: -79px -240px;
 }
-/*&.facebook
-      background-position 0 -160px
-  &:hover
-      background-position -79px -240px*/
-.twitter {
+.icon-social.facebook {
+  background-position: 0 -160px;
+}
+.icon-social:hover {
+  background-position: -80px -160px;
+}
+.icon-social.twitter {
   background-position: 0 -320px;
 }
-.twitter:hover {
+.icon-social.twitter:hover {
   background-position: -80px -320px;
 }
 /**** PAGES ****/
@@ -319,6 +323,7 @@ Global elements
   left: 0;
 }
 .company-info-slider-holder.rel {
+  top: 0;
   left: 0;
   position: relative;
 }
@@ -342,7 +347,6 @@ Global elements
   font-size: 23px;
   color: #fff;
   text-align: center;
-  text-transform: uppercase;
 }
 .company-info-slider .slide.is-active {
   z-index: 1;
@@ -439,6 +443,11 @@ Global elements
   position: relative;
   float: left;
   margin: 0 0 0 32px;
+}
+.services {
+  width: 980px;
+  height: 100%;
+  overflow: hidden;
 }
 .services li {
   float: left;
