--- a/web/css/main.styl
+++ b/web/css/main.styl
@@ -129,6 +129,7 @@ Global elements
   margin 0 auto
 .content
   position relative
+  overflow hidden
   height 70%
   max-width 980px
   min-width 980px
@@ -237,7 +238,8 @@ Global elements
     height 119px
     background-position -436px -162px
 .icon-social
-  float left
+  float right
+  margin 10px 44px 0 0
   background-image url(spriteLink)
   width 79px
   height 80px
@@ -245,10 +247,10 @@ Global elements
     background-position 0 -240px
     &:hover
       background-position -79px -240px
-/*&.facebook
+  &.facebook
       background-position 0 -160px
   &:hover
-      background-position -79px -240px*/
+      background-position -80px -160px
   &.twitter
     background-position 0 -320px
     &:hover
@@ -268,9 +270,9 @@ for num in (0..8)
     top 0
     left 0
   &.rel
+    top 0
     left 0
     position relative
-
 .company-info-slider
   width 100%
   height 100%
@@ -289,7 +291,6 @@ for num in (0..8)
       font-size 23px
       color #ffffff
       text-align center
-      text-transform uppercase
     &.is-active
       z-index 1
 
@@ -365,6 +366,9 @@ for num in (0..8)
   float left
   margin 0 0 0 32px
 .services
+  width 980px
+  height 100%
+  overflow hidden
   li
     float left
     margin-right 110px
